<resources>
    <string name="app_name">Are We There Yet baxterm8</string>
    <string name="dummy">Dummy</string>

    <string name="longitude">Longitude:</string>





    <string name="lat">Latitude:</string>


    <string name="newloc">New Location:</string>


    <string name="provider">Provider:</string>

    <string name="newButton">New</string>

    <string name="sparty">sparty</string>

    <string name="drive">drive</string>

    <string name="walk">walk</string>

    <string name="bike">bike</string>

    <string name="route">route</string>

    <string name="home">Big Johns
</string>


    <string name="eb2250">eb2250</string>

    <string name="exception">Failed to communicate with geolocation services</string>
    <string name="couldnotfind">Unable to locate address</string>

</resources>